--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,12 @@
                 {{p.title}}
               </ion-label>
             </ion-item>
+            <ion-item (click)="logout()">
+              <ion-icon slot="start" name="log-out"></ion-icon>
+              <ion-label>
+                Uitloggen
+              </ion-label>
+            </ion-item>
           </ion-menu-toggle>
         </ion-list>
       </ion-content>
